--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -37,7 +37,7 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden {
 	position: absolute;
 	width: 1px;
 	height: 1px;
@@ -601,7 +601,6 @@ img {
 .review {
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
 	margin: 0 20px;
 }
 
@@ -609,6 +608,10 @@ img {
 	margin: 0;
 	padding: 0;
 	border: none;
+}
+
+.review__fieldset--feeling {
+	display: inline-flex;
 }
 
 .review__legend {
@@ -634,10 +637,13 @@ img {
 	margin-bottom: 38px;
 }
 
+.review__legend--sight {
+	margin-bottom: 33px;
+}
+
 .review__list {
 	.reset-list();
 }
-
 
 .review__label {
 	font-size: 14px;
@@ -665,16 +671,16 @@ img {
 
 .review__label--feeling,
 .review__label--sight {
-	font-weight: 700;
-	text-transform: none;
-}
-
-.review__label--feeling {
 	display: inline-block;
 	position: relative;
 	margin-left: 79px;
-	margin-bottom: 47px;
+	font-weight: 700;
+	text-transform: none;
 	user-select: none;
+}
+
+.review__label--feeling {
+	margin-bottom: 47px;
 	&[for="hard"] {
 		margin-bottom: 43px;
 	}
@@ -688,10 +694,53 @@ img {
 		height: 56px;
 		border-radius: 50%;
 		background-color: #f2f2f2;
-		//box-shadow: inset 0px 0px 0px 17px #f2f2f2;
-		//background-image: radial-gradient( at 50% 50%, #333333, #333333);
+		//background-image: radial-gradient( at 50% 50%, #333333 11px, #f2f2f2 12px);
 
+	}
+	&:hover {
+		&::before {
+			background-color: #e5e5e5;
+		}
+	}
+	&:active,
+	&:focus	{
+		&::before {
+			background-color: #d5d5d5;
+		}
+	}
 }
+
+.review__label--sight {
+	margin-bottom: 56px;
+	&[for="rocks"] {
+		margin-bottom: 42px;
+	}
+
+	&::before {
+		content: '';
+		position: absolute;
+		left: -79px;
+		bottom: -18px;
+		width: 56px;
+		height: 56px;
+		border-radius: 5px;
+		background-color: #f2f2f2;
+	}
+	&:hover {
+		&::before {
+			background-color: #e5e5e5;
+		}
+	}
+	&:active,
+	&:focus {
+		&::before {
+			background-color: #d5d5d5;
+		}
+	}
+}
+
+.review__legend--emotions {
+	margin-bottom: 17px;
 }
 
 
@@ -734,6 +783,16 @@ img {
 	&[name="otchestvo"] {
 		flex-basis: 208px;
 	}
+
+	&:hover {
+		background-color: #e5e5e5;
+	}
+	&:active,
+	&:focus	{
+		background-color: #ffffff;
+		outline: 4px solid #e5e5e5;
+		outline-offset: -4px;
+	}
 }
 
 .review__input--contacts {
@@ -751,6 +810,50 @@ img {
 		background-repeat: no-repeat;
 		background-position: right 21px top 23px, 0 0;
 	}
+}
+
+.review__input--feeling {
+	&:checked {
+		& + .review__label--feeling {
+		&::before {
+			background-image: radial-gradient( at 50% 50%, #333333 11px, #f2f2f2 12px);
+			}
+		&:hover {
+			&::before {
+				background-image: radial-gradient( at 50% 50%, #333333 11px, #e5e5e5 12px);
+			}
+		}
+		&:active,
+		&:focus {
+			&::before {
+				background-image: radial-gradient( at 50% 50%, rgba(51,51,51, 0.3) 11px, #d5d5d5 12px);
+			}
+		}
+		}
+	}
+}
+
+.review__input--sight {
+	&:checked {
+		& + .review__label--sight {
+			&::before {
+			background-image: url('../images/tick.svg');
+			background-repeat: no-repeat;
+			background-position: right 15px top 20px;
+			}
+
+			&:active,
+			&:focus {
+				&::before {
+					background-color: #d5d5d5;
+					background-image: url('../images/tick-down.svg');
+					background-repeat: no-repeat;
+					background-position: right 15px top 20px;
+				}
+			}
+		
+	}
+}
 }
 
 
@@ -1260,6 +1363,7 @@ img {
 
 .review {
 	flex-direction: row;
+	flex-wrap: wrap;
 	margin: 0 8%;
 	padding-top: 40px;
 }
