--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -569,7 +569,8 @@ h1, h2, h3, p  {
 }
 
 //page-form
-.container-main--form {
+.container-main--form,
+.container-main--photo {
 	background-color: #ffffff;
 }
 
@@ -602,6 +603,20 @@ h1, h2, h3, p  {
 	font-size: 14px;
 	line-height: 22px;
 	color: rgba(51, 51, 51, 0.3);
+}
+
+.header-inner--photo {
+	padding: 40px 0 28px;
+
+	& .header-inner__heading {
+		margin-bottom: 32px;
+		color: #000000;
+	}
+
+	& .header-inner__description {
+		padding: 0 16%;
+		color: #333333;
+	}
 }
 
 //<form>
@@ -1015,6 +1030,12 @@ h1, h2, h3, p  {
 	width: 280px;
 }
 
+//page-photos
+
+.photos__list {
+	.reset-list();
+}
+
 @media (max-width:767px) {
 	.site-navigat {
 		padding-bottom: 56px;
@@ -1135,7 +1156,8 @@ h1, h2, h3, p  {
 			}
 		}
 
-	.header-inner--form {
+	.header-inner--form,
+	.header-inner--photo {
 		border-bottom: 1px solid #e5e5e5;
 	}	
 	
@@ -1502,6 +1524,19 @@ h1, h2, h3, p  {
 .header-inner__description {
 	color: #333333;
 }
+
+.header-inner--photo {
+	padding: 71px 0 70px;
+
+	& .header-inner__heading {
+		margin-bottom: 28px;
+	}
+	& .header-inner__description {
+		padding: 0 27%;
+	}
+}
+
+//form
 
 .review {
 	flex-direction: row;
@@ -1933,6 +1968,14 @@ h1, h2, h3, p  {
 
 		& .header-inner__description {
 			padding: 0 35.3%;
+		}
+	}
+
+	.header-inner--photo {
+		padding: 108px 0 72px;
+		
+		& .header-inner__description {
+			padding: 0 35.5%;
 		}
 	}
 
