--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -619,6 +619,20 @@ h1, h2, h3, p  {
 	}
 }
 
+.header-inner--video {
+	padding: 34px 0 38px;
+}
+
+.header-inner__heading--video {
+	margin-bottom: 30px;
+	color: #000000;
+}
+
+.header-inner__description--video {
+	padding: 0 18%;
+	color: #333333;
+}
+
 //<form>
 
 .review {
@@ -1088,6 +1102,63 @@ h1, h2, h3, p  {
 	line-height: 17px;
 	font-weight: 700;
 }
+
+//video
+
+.video-wrapper {
+	padding-bottom: 143px;
+}
+
+.video-container {
+	position: relative;
+	width: 100%;
+	height: 201px;
+}
+
+.video__controls {
+	position: absolute;
+	left: 20px;
+	right: 20px;
+	bottom: -66px;
+	width: 280px;
+}
+
+.controls__box {
+	height: 45px;
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
+.controls__operations {
+	display: flex;
+	align-items: center;
+	height: 66px;
+	background-color: #f2f2f2;
+}
+
+.controls__button {
+	padding: 0;
+	color: #5c6870;
+	background-color: transparent;
+}
+
+.controls__range--operations {
+	display: none;
+}
+
+.controls__button-replay {
+	margin-left: 25px;
+	margin-right: 133px;
+}
+
+.controls__button-subtitles {
+	margin-right: 31px;
+}
+
+.controls__button-fullscreen {
+	margin-right: 23px;
+}
+
+
 
 @media (max-width:767px) {
 	.site-navigat {
@@ -1602,6 +1673,19 @@ h1, h2, h3, p  {
 	}
 }
 
+.header-inner--video {
+	padding: 63px 0 74px;
+}
+
+.header-inner__heading--video {
+	margin-bottom: 28px;
+}
+
+.header-inner__description--video {
+	padding: 0 27.5%;
+}
+
+
 //form
 
 .review {
@@ -1892,6 +1976,53 @@ h1, h2, h3, p  {
 	margin-left: 10px;
 }
 
+//video
+
+.video-container {
+	margin: 0 auto;//7.81%;
+	width: 84.37%;
+	height: 500px;
+}
+
+.video__controls {
+	left: 0;
+	right: 0;
+	bottom:0;
+	width: 100%;
+}
+
+.controls__box {
+	display: none;
+}
+
+.controls__operations {
+	height: 93px;
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
+.controls__button {
+	color: #ffffff;
+}
+
+.controls__range--operations {
+	display: inline-block;
+	margin-right: 42px;
+	flex-basis: 389px;
+}
+
+.controls__button-replay {
+	margin-left: 35px;
+	margin-right: 42px;
+}
+
+.controls__button-subtitles {
+	margin-right: 31px;
+}
+
+.controls__button-fullscreen {
+	margin-right: 41px;
+}
+
 }
 
 @media (min-width: 1280px) {
@@ -2109,6 +2240,14 @@ h1, h2, h3, p  {
 		}
 	}
 
+	.header-inner--video {
+		padding: 67px 0 72px;
+	}
+
+	.header-inner__description--video {
+		padding: 0 36%;
+	}
+
 	//.review
 
 	.review {
@@ -2267,5 +2406,20 @@ h1, h2, h3, p  {
 	.photos__button-like {
 		color: #ffffff;
 	}
+
+//video
+
+.video-container {
+	width: 800px;
+	
+}
+
+.controls__range--operations {
+	flex-basis: 540px;
+}
+
+.controls__button-fullscreen {
+	margin-right: 42px;
+}
 
 }
