--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -100,6 +100,11 @@ h1, h2, h3, p  {
 	transform: translateX(-50%);
 	width: 102px;
 	height: 83px;
+	& picture {display: block;}
+
+	& img {
+		max-height: 83px; //ie_11
+	}
 }
 
 .button {
@@ -171,6 +176,10 @@ h1, h2, h3, p  {
 .slogan__image {
 	display: block;
 	padding: 90px 20px 85px;
+	min-width: 280px;
+	min-height: 213px;
+	max-width: 280px;
+	max-height: 213px;
 }
 
 .slogan--nomain__image {
@@ -227,10 +236,14 @@ h1, h2, h3, p  {
 	color: #ffffff;
 }
 
+.advantages-conception__heading--bridge {
+	& br {display: none;}
+}
+
 .advantages-conception__number {
 	position: relative;
-	display: block;
-	margin-bottom: 17px;
+	display: inline-block;
+	margin-bottom: 16px;
 	font-size: 14px;
 	line-height: 20px;
 	font-weight: 400;
@@ -1390,7 +1403,7 @@ h1, h2, h3, p  {
 	}
 
 .site-navigat__item > a {
-	padding: 15px 25px 15px;
+	padding: 15px 13px 15px;
 	font-size: 14px;
 	line-height: 26px;
 	color: inherit;
@@ -1438,8 +1451,10 @@ h1, h2, h3, p  {
 
 .slogan__image {
 	padding: 77px 154px 91px;
-	width: 460px;
-	height: 350px;
+	max-width: 460px;
+	max-height: 350px;
+	min-width: 460px;
+	min-height: 350px;
 }
 
 .slogan--nomain__image {
@@ -1497,13 +1512,28 @@ h1, h2, h3, p  {
 .advantages-conception {
 	box-sizing: border-box;
 	flex-basis: 33%;
-	padding: 47px 47px 46px 46px;
+	//padding: 47px 47px 46px 46px;
+	padding: 30px 47px 29px 46px; //ie11
+
+}
+.advantages-another__advantages-conception {
+	& .advantages-conception__heading {
+		padding: 0 12%;
+	}
+
+	& .advantages-conception__heading--square {
+		padding: 0 5%;
+	}
 }
 
 
 .advantages-conception__heading {
 	margin-bottom: 13px;
 	font-size: 21px;
+}
+
+.advantages-conception__heading--bridge {
+	& br {display: inline;}
 }
 
 .advantages-conception__number {
@@ -1601,8 +1631,8 @@ h1, h2, h3, p  {
 .advantages-conception--bridge {
 	order: 1;
 
-	& .advantages-conception__heading {
-		padding: 0 11.3%;//0 18px;
+	& .advantages-conception__heading--bridge {
+		padding: 0 8%; //ie11
 	}
 }
 
@@ -1612,11 +1642,13 @@ h1, h2, h3, p  {
 
 .advantages-another__advantages-conception {
 	flex-basis: 33%;
+	max-width: 33%;
 	margin: 0 auto;
 
 	&:last-child {
 		padding-bottom: 46px;
 	}
+
 	& .advantages-conception__description {
 		padding: 0 10.5%;
 	}
@@ -1669,12 +1701,14 @@ h1, h2, h3, p  {
 	padding-bottom: 7px;
 	box-sizing: border-box;
 	flex-basis: 33%;
+	max-width: 33%;
 }
 
 
 .site-footer__social-links {
 	margin: 0;
 	flex-basis: 33%;
+	max-width: 33%;
 }
 
 .social-links__list {
@@ -1685,6 +1719,7 @@ h1, h2, h3, p  {
 
 .site-footer__copyright {
 	flex-basis: 33%;
+	max-width: 33%;
 	padding-bottom: 7px;
 }
 
@@ -2110,6 +2145,10 @@ h1, h2, h3, p  {
 	.page-header__logo {
 		width: 187px;
 		height: 96px;
+
+		& img {
+			max-height: 96px; //ie_11
+		}
 	}
 
 	.slogan {
@@ -2161,8 +2200,8 @@ h1, h2, h3, p  {
 	
 
 	.advantages-conception {
-		padding-top: 53px; 
-		padding-bottom: 58px;
+		padding-top: 50px; 
+		padding-bottom: 53px;
 	}
 
 	.advantages-conception__heading {
@@ -2244,7 +2283,7 @@ h1, h2, h3, p  {
 	.advantages-conception--bridge {
 	
 		& .advantages-conception__heading {
-			padding: 0 29.5%;
+			padding: 0 8%;
 		}
 		& .advantages-conception__description {
 			padding: 0 20%;
@@ -2266,7 +2305,11 @@ h1, h2, h3, p  {
 		}
 
 		& .advantages-conception__heading {
-			padding: 0 32%;
+			padding: 0 29.5%;
+		}
+
+		& .advantages-conception__heading--square {
+			padding: 0 25%;
 		}
 	}
 
