--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -183,9 +183,15 @@ h1, h2, h3, p  {
 }
 
 .slogan--nomain__image {
-	margin: 0 auto 67px;
+	//margin: 0 auto 67px;
 	padding: 0;
 	padding-top: 52px;
+	margin: 0 auto;
+	padding-bottom: 67px;
+	min-width: auto;
+	min-height: auto;
+	max-width: auto;
+	max-height: auto;
 }
 
 .advantages__title-wrapper {
@@ -559,14 +565,19 @@ h1, h2, h3, p  {
 }
 
 .copyright {
-	position: relative;
+	//position: relative;
 	margin: 0;
 }
 
+
 .copyright__text {
-	display: block;
-	margin-right: 134px;
-	text-align: right;
+	//display: block;
+	//margin-right: 134px;
+	//text-align: right;
+	position: relative;
+	display: inline-block;
+	text-align: center;
+	padding-right: 16px;
 	font-size: 14px;
 	line-height: 24px;
 
@@ -575,8 +586,10 @@ h1, h2, h3, p  {
 .copyright__link {
 	display: inline-block;
 	position: absolute;
-	right: 96px;
-	bottom: -13px;
+	//right: 96px;
+	right: -21px;
+	//bottom: -13px;
+	bottom: -14px;
 	color: #000000;
 
 	&:hover {
@@ -1166,26 +1179,67 @@ h1, h2, h3, p  {
 .controls__range {
 	margin: 0 auto;
 	flex-basis: 235px; 
-	height: 3px;
+	//height: 3px;
 	appearance: none;
 	cursor: pointer;
-	background-color: rgba(255, 255, 255, 0.2);
+	background-color: transparent;
+
+	&::-webkit-slider-runnable-track {
+		-webkit-appearance: none;
+		border: none;
+		height: 3px;
+		background-color: rgba(255, 255, 255, 0.2);
+	}
 
 	&::-webkit-slider-thumb {
 		-webkit-appearance: none;
+		margin-top: -3px;
 		width: 9px;
 		height: 9px;
 		border-radius: 50%;
 		background-color: #fff;
 		
 	}
+
 	&::-moz-range-thumb {
 		-moz-appearance: none;
 		width: 9px;
 		height: 9px;
 		border-radius: 50%;
-		background-color: #ffffff;
+		background-color: #fff;
 		
+	}
+	&::-moz-range-progress {
+		-webkit-appearance: none;
+		height: 3px;
+		background-color: rgba(255, 255, 255, 0.2); 
+	}
+	&::-moz-range-track {  
+		-webkit-appearance: none;
+		height: 3px;
+		background-color: rgba(255, 255, 255, 0.2);
+	}
+
+	&::-ms-thumb {
+		border: none;
+		height: 9px;
+		width: 9px;
+		border-radius: 50%;
+		background: #fff;
+	}
+
+	&::-ms-track {
+		height: 3px;
+		background-color: transparent;
+		border-color: transparent;
+		border-width: 5px;
+		color: transparent;
+	}
+	&::-ms-fill-lower {
+		background-color: rgba(255, 255, 255, 0.2);
+	}
+	&::-ms-fill-upper {
+		background-color: rgba(255, 255, 255, 0.2);
 	}
 }
 
@@ -1458,11 +1512,16 @@ h1, h2, h3, p  {
 }
 
 .slogan--nomain__image {
-	margin-bottom: 117px;
+	//margin-bottom: 117px;
 	padding: 0;
+	padding-bottom: 117px;
 	padding-top: 95px;
 	width: 458px;
 	height: 78px;
+	min-width: auto;
+	min-height: auto;
+	max-width: auto;
+	max-height: auto;
 }
 
 .slogan__decoration {
@@ -1724,12 +1783,15 @@ h1, h2, h3, p  {
 }
 
 .copyright__text {
-	margin-right: 38%;
+	//margin-right: 38%;
+	padding-right: 11px;
 }
 
 .copyright__link {
-	right: 23%;
-	bottom: -6px;
+	//right: 23%;
+	//bottom: -6px;
+	bottom: -14px;
+	right: -26px;
 }
 
 .header-inner--form {
@@ -2174,8 +2236,9 @@ h1, h2, h3, p  {
 	}
 
 	.slogan--nomain__image {
-		margin-bottom: 120px;
+		//margin-bottom: 120px;
 		padding: 0;
+		padding-bottom: 120px;
 		padding-top: 102px;
 		width: 460px;
 		height: 79px;
@@ -2334,11 +2397,13 @@ h1, h2, h3, p  {
 	}
 
 	.copyright__text {
-		margin-right: 40%;
+		//margin-right: 40%;
+		padding-right: 0;
 	}
 	
 	.copyright__link {
-		right: 30%;
+		//right: 30%;
+		right: -37px;
 	}
 
 	.header-inner--form {
