--- a/src/styles/blocks/pop-up.less
+++ b/src/styles/blocks/pop-up.less
@@ -3,6 +3,7 @@
 	position: fixed;
 	top: 50%;
 	left: 50%;
+	z-index: 10;
 	transform: translate(-50%, -50%);
 	text-align: center;
 	background-color: #ffffff;
