change styles of headings of block advantages-another

--- a/src/styles/blocks/advantages-another.less
+++ b/src/styles/blocks/advantages-another.less
@@ -56,11 +56,11 @@
 
 	.advantages-another__advantages-conception {
 		& .advantages-conception__heading {
-			padding: 0 12%;
+			padding: 0 24%;//0 12%;
 		}
 	
 		& .advantages-conception__heading--square {
-			padding: 0 5%;
+			padding: 0 20%;
 		}
 	}
 
@@ -97,11 +97,11 @@
 		}
 
 		& .advantages-conception__heading {
-			padding: 0 29.5%;
+			padding: 0 34%;//0 29.5%;
 		}
 
 		& .advantages-conception__heading--square {
-			padding: 0 25%;
+			padding: 0 28%;//0 25%;
 		}
 	}
 }
