changed styles (paddings) in blocks advantages-conpception, advantages-another (for firefox)

--- a/src/styles/blocks/advantages-another.less
+++ b/src/styles/blocks/advantages-another.less
@@ -103,5 +103,13 @@
 		& .advantages-conception__heading--square {
 			padding: 0 28%;//0 25%;
 		}
+
+		& .advantages-conception__description {
+			padding: 0 19.5%;
+		}
+
+		& .advantages-conception__description.advantages-conception__description--road {
+			padding: 0 23%;
+		}
 	}
 }
