--- a/src/styles/blocks/advantages-conception.less
+++ b/src/styles/blocks/advantages-conception.less
@@ -51,6 +51,9 @@
 	line-height: 20px;
 	font-weight: 400;
 	color: #ffffff;
+	& br {
+		display: none;
+	}
 }
 
 .advantages-conception--bridge {
@@ -63,11 +66,13 @@
 		box-sizing: border-box;
 		flex-basis: 33%;
 		//padding: 47px 47px 46px 46px;
-		padding: 30px 47px 29px 46px; //ie11
+		//padding: 30px 47px 29px 46px; //ie11
+		padding: 30px 0 29px;
 	}
 
 	.advantages-conception__heading {
 		margin-bottom: 13px;
+		padding: 0 46px;
 		font-size: 21px;
 	}
 
@@ -81,6 +86,10 @@
 	
 	.advantages-conception__description {
 		padding: 0 16px;
+		//padding: 0 62px;+46px
+		& br {
+			display: inline;
+		}
 	}
 
 	.advantages-conception--bridge {
@@ -96,6 +105,7 @@
 @media (min-width: 1280px) {
 
 	.advantages-conception {
+		padding: 30px 47px 29px 46px;
 		padding-top: 50px; 
 		padding-bottom: 53px;
 	}
@@ -111,6 +121,7 @@
 
 	.advantages-conception__description {
 		padding: 0 12%;
+		& br {display: none;}
 	}
 
 	.advantages-conception--bridge {
